--- a/katas.cabal
+++ b/katas.cabal
@@ -27,6 +27,9 @@ executable katas
                        , Katas.FixIt
                        , Katas.AdditionAssoc
                        , Katas.TimesComm
+                       , Katas.SymbolicDiff
+                       , Katas.Coroutine
+                       , Katas.ChurchBooleans
     main-is: Main.hs
     hs-source-dirs: src
     default-language: Haskell2010
