--- a/katas.cabal
+++ b/katas.cabal
@@ -30,6 +30,7 @@ executable katas
                        , Katas.SymbolicDiff
                        , Katas.Coroutine
                        , Katas.ChurchBooleans
+                       , Katas.SKICombinators
     main-is: Main.hs
     hs-source-dirs: src
     default-language: Haskell2010
