--- a/katas.cabal
+++ b/katas.cabal
@@ -31,6 +31,8 @@ executable katas
                        , Katas.Coroutine
                        , Katas.ChurchBooleans
                        , Katas.SKICombinators
+                       , Katas.RecurrenceRelations
+                       , Katas.ChurchNums
     main-is: Main.hs
     hs-source-dirs: src
     default-language: Haskell2010
