--- a/katas.cabal
+++ b/katas.cabal
@@ -1,3 +1,4 @@
+cabal-version: >=1.18
 name: katas
 version: 1.0.0
 license: BSD3
@@ -33,6 +34,45 @@ executable katas
                        , Katas.SKICombinators
                        , Katas.RecurrenceRelations
                        , Katas.ChurchNums
+                       , Katas.SimpleSQLEngine
+                       , Katas.Parsable
     main-is: Main.hs
+    other-modules:
+        Katas.AlgebraicISO
+        Katas.BalancedParens
+        Katas.Befunge93
+        Katas.Church
+        Katas.Fibonacci
+        Katas.ISO
+        Katas.Imperative
+        Katas.IsThatALine
+        Katas.SimpleAssembler
+        Katas.SimpleLens
+        Katas.Smallfuck
+        Katas.Snail
+        Katas.TreeByLevels
+        Katas.TypeTranspiler
+        Katas.ApplicativeParser
+        Katas.WordBreak
+        Katas.PolyvariadicFunctions
+        Katas.AdditionCommutes
+        Katas.FixIt
+        Katas.AdditionAssoc
+        Katas.TimesComm
+        Katas.SymbolicDiff
+        Katas.Coroutine
+        Katas.ChurchBooleans
+        Katas.SKICombinators
+        Katas.RecurrenceRelations
+        Katas.ChurchNums
+        Katas.SimpleSQLEngine
     hs-source-dirs: src
     default-language: Haskell2010
+    build-depends:
+        base <5,
+        random -any,
+        mtl -any,
+        containers -any,
+        lens -any,
+        megaparsec -any,
+        text -any
