--- a/katas.cabal
+++ b/katas.cabal
@@ -40,6 +40,7 @@ executable katas
                        , Katas.Calculator
                        , Katas.Tagless
                        , Katas.Singletons
+                       , Katas.ScottEncoding
     main-is: Main.hs
     other-modules:
         Katas.AlgebraicISO
