--- a/katas.cabal
+++ b/katas.cabal
@@ -6,7 +6,7 @@ cabal-version: >= 1.18
 build-type: Simple
 
 executable katas
-    build-depends: base < 5, random, mtl, containers, lens
+    build-depends: base < 5, mtl, containers, lens
     other-modules:       Katas.AlgebraicISO
                        , Katas.BalancedParens
                        , Katas.Befunge93
@@ -73,11 +73,3 @@ executable katas
         Katas.SimpleSQLEngine
     hs-source-dirs: src
     default-language: Haskell2010
-    build-depends:
-        base <5,
-        random -any,
-        mtl -any,
-        containers -any,
-        lens -any,
-        megaparsec -any,
-        text -any
