--- a/katas.cabal
+++ b/katas.cabal
@@ -40,6 +40,7 @@ executable katas
                        , Katas.Tagless
                        , Katas.Singletons
                        , Katas.ScottEncoding
+                       , Katas.EvalMathExpr
     main-is: Main.hs
     other-modules:
         Katas.AlgebraicISO
@@ -70,5 +71,6 @@ executable katas
         Katas.RecurrenceRelations
         Katas.ChurchNums
         Katas.SimpleSQLEngine
+        Katas.EvalMathExpr
     hs-source-dirs: src
     default-language: Haskell2010
